<resources>
    <string name="app_name">SkyCast</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_settings">Settings</string>
    <string name="cairo">Cairo</string>
    <string name="no_alarms">No Alarms</string>
    <string name="no_places">No Places</string>
    <string name="today">Today</string>
    <string name="next_forecast">Next Forecast</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="notifications">Notifications</string>
    <string name="ok">Ok</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">Meter / Sec</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="alarm">Alarm</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="search_for_a_city">Search for a city</string>
    <string name="search_location">Search location</string>

    <!-- Added weather-related labels -->
    <string name="wind_label">Wind</string>
    <string name="humidity_label">Humidity</string>
    <string name="pressure_label">Pressure</string>
    <string name="visibility_label">Visibility</string>
    <string name="cloudiness_label">Cloudiness</string>
    <string name="loading">Loading...</string>
    <string name="error_loading_weather">Error loading weather</string>
</resources>