<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_200sdp"
    tools:context=".ui.initialsetup.view.InitialSetupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1C2526"
        android:padding="@dimen/_12sdp">

        <!-- Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/initial_setup"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Location Label -->
        <TextView
            android:id="@+id/location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_80sdp"
            android:text="@string/location"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toStartOf="@+id/gps_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- GPS Toggle -->
        <Switch
            android:id="@+id/gps_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_23sdp"
            android:layout_marginEnd="@dimen/_34sdp"
            android:text="@string/gps"
            android:textColor="#FFFFFF"
            android:thumbTint="@color/switch_thumb_color"
            android:trackTint="@color/switch_track_color"
            app:layout_constraintEnd_toStartOf="@id/map_switch"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <!-- Map Toggle -->
        <Switch
            android:id="@+id/map_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_23sdp"
            android:text="@string/map"
            android:textColor="#FFFFFF"
            android:thumbTint="@color/switch_thumb_color"
            android:trackTint="@color/switch_track_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <!-- Notifications Label -->
        <TextView
            android:id="@+id/notifications_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_34sdp"
            android:layout_marginEnd="@dimen/_110sdp"
            android:text="@string/notifications"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toStartOf="@+id/notifications_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_label" />

        <!-- Notifications Toggle -->
        <Switch
            android:id="@+id/notifications_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_72sdp"
            android:thumbTint="@color/switch_thumb_color"
            android:trackTint="@color/switch_track_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/notifications_label"
            app:layout_constraintTop_toBottomOf="@+id/gps_switch" />

        <!-- OK Button -->
        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1sdp"
            android:backgroundTint="#7FD9DE"
            android:text="@string/ok"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>